# PatoBots_Trainee

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  controle.c  controle.h  main.c  main.c.bak  motor.c  motor.h  my_platform.c  pinos.h
src/bluetooth/: my_platform.c
src/robot/: robot_task.h
src/tsop/: ir_control.c
src/utils/: config.h
